<resources>
    <string name="app_name">ComprehensiveAndroidAssessment</string>
    <string name="username">username</string>
    <string name="enter_password">enter password</string>
    <string name="please_signin">Please Signin</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
    <string name="terrier">Terrier</string>
    <string name="spaniel">Spaniel</string>
    <string name="retriever">Retriever</string>
    <string name="poodle">Poodle</string>
    <string name="poodler">Poodler</string>
</resources>
